# tailtest

./: .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml
agents/: validator.md  verifier.md
commands/: summary.md  tailtest-hunt.md  tailtest-off.md  tailtest-on.md  tailtest.md
data/redteam/: README.md  attacks.schema.yaml  attacks.yaml
docs/: configuration.md  depth-modes.md  existing-projects.md  faq.md  filter-reference.md  findings-catalog.md  how-it-works.md  index.md  install.md  languages.md  monorepo.md  privacy.md  quickstart.md  redteam-disclosure.md  session-state.md  slash-command.md  troubleshooting.md  validator.md
hooks/: _bootstrap.py  hooks.json  post_tool_use.py  session.schema.json  session_end.py  session_start.py  stop.py  subagent_stop.py
hooks/lib/: context.py  filter.py  ramp_up.py  runners.py  session.py  style.py
skills/debt/: SKILL.md
skills/depth/: SKILL.md
skills/help/: SKILL.md
skills/memory/: SKILL.md
skills/report/: SKILL.md
skills/scan/: SKILL.md
skills/security/: SKILL.md
skills/setup/: SKILL.md
skills/status/: SKILL.md
skills/tailtest/: SKILL.md
src/tailtest/: __init__.py  __main__.py
src/tailtest/cli/: __init__.py  dashboard.py  doctor.py  main.py  run.py  scan.py
src/tailtest/core/: __init__.py  session_state.py
src/tailtest/core/assertions/: __init__.py
src/tailtest/core/baseline/: __init__.py  manager.py
src/tailtest/core/config/: __init__.py  defaults.py  loader.py  schema.py
src/tailtest/core/coverage/: __init__.py  delta.py
src/tailtest/core/events/: __init__.py  schema.py  writer.py
src/tailtest/core/findings/: __init__.py  schema.py
src/tailtest/core/generator/: __init__.py  ast_signals.py  compile_check.py  generator.py  heuristics.py  prompts.py
src/tailtest/core/recommendations/: __init__.py  schema.py  store.py
src/tailtest/core/recommender/: __init__.py  engine.py
src/tailtest/core/reporter/: __init__.py  html.py  terminal.py
src/tailtest/core/runner/: __init__.py  _tap.py  ava.py  base.py  javascript.py  mocha.py  node_test.py  python.py  rust.py  tape.py
src/tailtest/core/scan/: __init__.py  detectors.py  profile.py  scanner.py  test_finder.py
src/tailtest/core/tia/: __init__.py  base.py  javascript.py  rust.py
src/tailtest/dashboard/: __init__.py  server.py
src/tailtest/dashboard/static/: dashboard.js  index.html
src/tailtest/hook/: __init__.py  post_tool_use.py  session_start.py
src/tailtest/llm/: __init__.py  claude_cli.py  resolver.py
src/tailtest/mcp/: __init__.py  server.py
src/tailtest/mcp/tools/: __init__.py  base.py  generate_tests.py  get_baseline.py  impacted_tests.py  invoke_validator.py  run_tests.py  scan_project.py  tailtest_status.py
src/tailtest/security/: __init__.py
src/tailtest/security/redteam/: __init__.py  loader.py  runner.py  schema.py
src/tailtest/security/sast/: __init__.py  semgrep.py
src/tailtest/security/sca/: __init__.py  cargo_audit.py  imports.py  manifests.py  osv.py
tests/: test_ast_signals.py  test_baseline.py  test_cli_dashboard.py  test_cli_doctor.py  test_cli_run.py  test_cli_scan.py  test_config.py  test_coverage_delta.py  test_dashboard_api.py  test_dashboard_server.py  test_entry_point_detection.py  test_events.py  test_filter.py  test_findings.py  test_generator.py  test_h1_h3.py  test_h2_h4.py  test_heuristics_auto_offer.py  test_hook_ai_agent_offer.py  test_hook_bootstrap.py  test_hook_post_tool_use.py  test_hook_session_start_and_auto_offer.py  test_hook_session_start_recs.py  test_hook_session_start_staleness.py  test_invoke_validator.py  test_llm_judge.py  test_mcp_server.py  test_mcp_tools.py  test_phase3.py  test_recommendations_schema.py  test_recommendations_store.py  test_recommender_engine.py  test_redteam_catalog.py  test_redteam_runner.py  test_reporter_html.py  test_reporter_terminal.py  test_runner_base.py  test_runner_javascript.py  test_runner_js_extra.py  test_runner_python.py  (+17 more)
tests/fixtures/python_project_failing/: pyproject.toml
tests/fixtures/python_project_failing/src/fixture_failing/: __init__.py
tests/fixtures/python_project_failing/tests/: test_buggy.py
tests/fixtures/python_project_passing/: pyproject.toml
tests/fixtures/python_project_passing/src/fixture_passing/: __init__.py
tests/fixtures/python_project_passing/tests/: test_math.py
tests/fixtures/runner_vitest_basic/: package.json  vitest.config.js
tests/fixtures/rust_project_failing/: Cargo.toml
tests/fixtures/rust_project_passing/: Cargo.toml
tests/fixtures/scanner_plain/: main.py  pyproject.toml
tests/fixtures/scanner_python_ai/: AGENTS.md  CLAUDE.md  Dockerfile  README.md  pyproject.toml
tests/fixtures/scanner_python_ai/src/scanner_python_ai/: __init__.py
tests/fixtures/scanner_python_ai/tests/: test_placeholder.py
tests/fixtures/scanner_typescript_ai/: AGENTS.md  package.json
(+11 files in other folders)
