[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fixture-failing"
version = "0.0.1"
requires-python = ">=3.11"

[tool.hatch.build.targets.wheel]
packages = ["src/fixture_failing"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# pythonpath (pytest 7+) replaces sys.path.insert() hacks in test files.
pythonpath = ["src"]
