[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fixture-passing"
version = "0.0.1"
requires-python = ">=3.11"

[tool.hatch.build.targets.wheel]
packages = ["src/fixture_passing"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# pythonpath (pytest 7+) replaces sys.path.insert() hacks in test files.
# With this, fixture tests can `import fixture_passing` directly.
pythonpath = ["src"]
