[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scanner-python-ai"
version = "0.0.1"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.30",
    "fastapi>=0.100",
    "pydantic>=2",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.hatch.build.targets.wheel]
packages = ["src/scanner_python_ai"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
